--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 		transition-property: all;
 		transition-duration: 1s;
 	}
-	button:hover{
+	button:active{
 		transform: scale(1.1);
-
+		background: linear-gradient(to bottom right, rgb(3, 183, 249),rgb(142, 142, 222));
 	}
 	.display{
 		border-radius: 8px;
@@ -116,3 +116,4 @@
   </script>
 </body>
 </html>
+
