--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	#display{
 		grid-column: 1 /span 4;
 		grid-row: 1/span 2;
+		text-align: right;
 	}
 	.clear{
 		grid-column: 1/ span 2;
@@ -116,6 +117,7 @@
   </script>
 </body>
 </html>
+
 
 
 
